--- a/styles/app.css
+++ b/styles/app.css
@@ -173,8 +173,7 @@ a, h1, h2, h3, h4, h5, h6 {
     -webkit-text-fill-color: transparent;
     transform: translateX(150%);
     
-    animation-duration: cubic-bezier(0.86, 0, 0.07, 1);
-    animation: slide-in 4.27s forwards;
+    animation: slide-in cubic-bezier(0.86, 0, 0.07, 1) 4.27s forwards;
 }
 
 .logo {
